# SCGraph

./: CMakeLists.txt  INSTALL  Makefile  Makefile.bak  Makefile.include.template  Makefile.include.template.bak  README  SHORT_LICENSE  TODO.org
cmake_modules/: FindGLEW.cmake  FindGraphicsMagick++.cmake  FindSuperCollider3.cmake
doc/: Makefile  ScGraph_Overview.scd
doc/examples/: TestDust.scd  eeg.scd  exp_cube.scd  iris.scd  rot_cube.scd  spectrum.scd  test.scd  vol_grain.scd  wobble_cube.scd
doc/help/: GBlending.html  GCube.html  GFreqAmp.html  GLighting.html  GLine.html  GPolygon.html  GQuad.html  GRotate.html  GShaderProgram.html  GStretch.html  GTriangle.html  scgraph.html
server/: Doxyfile  Makefile  TODO  control.cc  control.h  control_loop.cc  control_loop.h  cow_ptr.cc  cow_ptr.h  face.cc  graphic_loop.cc  graphics_bus.h  graphics_visitor.cc  group.cc  hvector_3d.h  in_out.h  jack_client.h  main.cc  main_window.cc  main_window.h  material.h  node.cc  node.h  node_tree.cc  node_tree.h  obj_loader.cc  obj_loader.h  options.h  osc_handler.cc  osc_handler.h  plugin.h  plugin_pool.cc  plugin_pool.h  sc__unit.h  scgraph.cc  scgraph.h  shader_pool.cc  shader_pool.h  synth.cc  synth.h  (+12 more)
server/oscpack/osc/: OscPrintReceivedElements.cpp  OscReceivedElements.cpp  OscReceivedElements.h
server/plugins/: Makefile  Makefile.bak  binary_op.h  blending.h  bordered_rectangle.cc  color.h  cube.h  freq_amp.cc  freq_amp.h  gl_renderer.cc  gl_renderer.h  light.h  lighting.cc  lighting.h  line.cc  material.cc  material.h  mul_add.h  points.h  polygon.cc  polygon.h  quad.h  rotate.cc  shader_program.h  stretch.h  transformation.h  translate.cc  triangle.cc
server/sclang/: GColor.sc  GPolygon.sc  Makefile
server/sclang/help/: GBorderedRectangle.html  GColor.html  GCulling.html  GGLRenderer.html  GLight.html  GMaterial.html  GPoints.html  GRectangle.html  GShaderUniform.html  GTexQuad.html  GTransform.html  GTranslate.html
src/: CMakeLists.txt  Makefile.bak  buffer_pool.cc  buffer_pool.h  color_rgba.cc  color_rgba.h  control.h  face.h  graphic_loop.h  graphics.cc  graphics.h  graphics_bus.cc  graphics_visitor.h  group.h  hvector_3d.cc  in_out.cc  in_out.h  jack_client.cc  loader_3d.cc  loader_3d.h  main.cc  material.cc  matrix.cc  matrix.h  node_tree.cc  node_tree.h  obj_loader.cc  obj_loader.h  options.cc  options.h  osc_handler.cc  plugin.cc  plugin_pool.cc  resources.qrc  sc__unit.cc  sc_unit_wrapper.cc  sc_unit_wrapper.h  scgraph.cc  scgraph.h  shader_pool.cc  (+12 more)
src/glew/: glew.c
src/oscpack/osc/: OscReceivedElements.cpp  OscReceivedElements.h
src/plugins/: CMakeLists.txt  binary_op.cc  blending.cc  bordered_rectangle.h  circle.cc  circle.h  color.cc  cube.cc  culling.cc  culling.h  freq_amp.cc  gl_renderer.cc  gl_renderer.h  light.cc  line.h  model.cc  model.h  mul_add.cc  point.cc  point.h  points.cc  quad.cc  rectangle.cc  rectangle.h  rotate.h  shader_program.cc  stretch.cc  sum3.cc  sum3.h  sum4.cc  sum4.h  transformation.cc  translate.h  triangle.h  tube.cc  tube.h
src/sc/: GCircle.sc  GModel.sc  GPoint.sc  GTube.sc
src/sc/HelpSource/Classes/: GBlending.schelp  GBorderedRectangle.schelp  GCircle.schelp  GColor.schelp  GCube.schelp  GCulling.schelp  GFreqAmp.schelp  GGLRenderer.schelp  GLight.schelp  GLighting.schelp  GLine.schelp  GMaterial.schelp  GPoints.schelp  GPolygon.schelp  GQuad.schelp  GRectangle.schelp  GRotate.schelp  GServer.schelp  GServerOptions.schelp  GShaderProgram.schelp  GShaderUniform.schelp  GStretch.schelp  GTexQuad.schelp  GTransform.schelp  GTranslate.schelp  GTriangle.schelp  GTube.schelp
src/sc/HelpSource/Reference/: Shaders.schelp  scgraph.schelp
src/sc/utils/: GServer.sc
src/tests/: CMakeLists.txt  test_obj_loader.cc  test_tree.cc
